--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@
 {%PROJECT_ID_UPPER%}_SESSION_COOKIE_SECURE="False"
 {%PROJECT_ID_UPPER%}_ALLOWED_HOSTS="localhost 127.0.0.1"
 {%PROJECT_ID_UPPER%}_REDIS_HOST="redis://127.0.0.1:6379/1"
-{%PROJECT_ID_UPPER%}_DB_NAME="{%PROJECT_ID%}_local"
+{%PROJECT_ID_UPPER%}_DB_NAME="{%PROJECT_ID_LOWER%}_local"
 {%PROJECT_ID_UPPER%}_DB_HOST="127.0.0.1"
 {%PROJECT_ID_UPPER%}_DB_USER="root"
 {%PROJECT_ID_UPPER%}_DB_PASSWORD=""
