--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-django==2.1.4
+django==2.1.5
 django-pipeline==1.6.14
 django-dotenv==1.4.2
 mysqlclient==1.3.14
@@ -7,3 +7,4 @@ pytz==2018.7
 python-dateutil==2.7.5
 twilio==6.22.1
 schedule==0.5.0
+-e git+git://github.com/alexdlaird/django-health-check.git@alaird-3.5.6#egg=django-health-check
