--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 mock==2.0.0
+coverage==4.5.1
 django==2.1.5
-coreapi==2.3.3
 djangorestframework==3.9.0
 django-pipeline==1.6.14
 django-dotenv==1.4.2
-mysqlclient==1.3.14
 django-redis==4.10.0
+coreapi==2.3.3
+mysqlclient==1.3.14
 pytz==2018.7
 python-dateutil==2.7.5
 twilio==6.22.1
