--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ install:
  - source .venv/bin/activate
  - easy_install distribute
  - python -m pip install -r requirements.txt
+ - python -m pip install -r requirements-dev.txt
 script:
 - make install test
