--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,6 @@ updates:
 - package-ecosystem: pip
   directory: "/"
   schedule:
-    interval: weekly
-    time: '13:00'
+    interval: monthly
+    time: '15:00'
   open-pull-requests-limit: 10
