--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,8 @@
 version: 2
 updates:
-- package-ecosystem: pip
+- package-ecosystem: "pip"
   directory: "/"
   schedule:
-    interval: monthly
-    time: '15:00'
+    interval: "monthly"
+    time: "15:00"
   open-pull-requests-limit: 10
