--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,7 @@ updates:
 - package-ecosystem: "pip"
   directory: "/"
   schedule:
-    interval: "monthly"
-    time: "15:00"
+    interval: "weekly"
+    day: "wednesday"
+    time: "13:00"
   open-pull-requests-limit: 10
