--- a/Makefile.template
+++ b/Makefile.template
@@ -47,5 +47,5 @@ migrate: virtualenv
 test: virtualenv
 	( \
 		source $({%PROJECT_ID_UPPER%}_VENV)/bin/activate; \
-		python -m coverage run --source='.' manage.py test && python -m coverage html; \
+		python -m coverage run --source='.' manage.py test && python -m coverage html -d _build/coverage && python -m coverage xml -o _build/coverage/coverage.xml; \
 	)
