--- a/.github/workflows/build.yml.template
+++ b/.github/workflows/build.yml.template
@@ -31,3 +31,8 @@ jobs:
         run: |
           make test
         shell: bash
+      - name: Upload coverage
+        if: matrix.python-version == '3.9'
+        uses: codecov/codecov-action@v1
+        with:
+          directory: ./_build/coverage
