--- a/deploy/conf/django.conf
+++ b/deploy/conf/django.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
 ServerAdmin ${{%PROJECT_ID_UPPER%}_ADMIN_EMAIL}
-ServerName {%PROJECT_HOST%}.alexlaird.com
+ServerName {%PROJECT_HOST%}
 
 RewriteEngine On
 RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
