--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ mysqlclient==2.1.0
 pytz==2021.3
 python-dateutil==2.8.2
 schedule==1.1.0
--e git+git://github.com/alexdlaird/django-health-check.git@alaird-3.5.6#egg=django-health-check
+-e git+https://github.com/alexdlaird/django-health-check.git@alaird-3.5.6#egg=django-health-check
