--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.6, 3.7, 3.8, 3.9, "3.10" ]
+        os: [ ubuntu-latest, macos-latest ]
+        python-version: [ "3.11" ]
+        include:
+          - python-version: "3.6"
+            os: ubuntu-20.04
 
     runs-on: ubuntu-latest
 
