--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,15 @@ jobs:
         include:
           - python-version: "3.6"
             os: ubuntu-20.04
+          - python-version: "3.7"
+            os: ubuntu-latest
+          - python-version: "3.8"
+            os: ubuntu-latest
+          - python-version: "3.9"
+            os: ubuntu-latest
+          - python-version: "3.10"
+            os: ubuntu-latest
+
 
     runs-on: ubuntu-latest
 
