--- a/.github/workflows/deploy.yml.template
+++ b/.github/workflows/deploy.yml.template
@@ -1,11 +1,13 @@
-name: "CI/CD"
+name: "Deploy"
+
+run-name: "Deploy ${{ github.ref_name }}"
 
 on:
   release:
     types: [ created ]
 
 jobs:
-  build:
+  deploy:
     name: Deploy
 
     runs-on: ubuntu-latest
