--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,6 @@
-name: "CI Tests"
+name: "Build"
+
+run-name: "Build ${{ github.ref_name }}"
 
 on:
   push:
@@ -14,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, macos-latest ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
         python-version: [ "3.11" ]
         include:
           - python-version: "3.8"
@@ -24,8 +26,7 @@ jobs:
           - python-version: "3.10"
             os: ubuntu-latest
 
-
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v2
