--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,14 +16,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        python-version: [ "3.11" ]
+        os: [ ubuntu-latest ]
+        python-version: [ "3.9", "3.11" ]
         include:
-          - python-version: "3.8"
-            os: ubuntu-latest
-          - python-version: "3.9"
-            os: ubuntu-latest
-          - python-version: "3.10"
+          - python-version: "3.6"
             os: ubuntu-latest
 
     runs-on: ${{ matrix.os }}
