--- a/.github/workflows/build.yml.template
+++ b/.github/workflows/build.yml.template
@@ -20,7 +20,7 @@ jobs:
         python-version: [ "3.11" ]
         include:
           - python-version: "3.8"
-            os: ubuntu-latest
+            os: ubuntu-20.04
           - python-version: "3.9"
             os: ubuntu-latest
           - python-version: "3.10"
