--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,3 +36,18 @@ jobs:
       - name: Run tests
         run:
           make test
+
+  automerge:
+    name: "Auto Approve"
+    needs: ci
+    runs-on: ubuntu-latest
+
+    permissions:
+      pull-requests: write
+      contents: write
+
+    steps:
+      - uses: fastify/github-action-merge-dependabot@v3
+        with:
+          target: minor
+          use-github-auto-merge: true
