--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run:
-          make install
-      - name: Run tests
-        run:
-          make test
+        run: make install
+      - name: Test
+        run: make test
 
   automerge:
     name: "Auto Approve"
