--- a/.github/workflows/build.yml.template
+++ b/.github/workflows/build.yml.template
@@ -35,16 +35,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run:
-          make install
+        run: make install
       - name: Run tests
-        run: |
-          if [ "$RUNNER_OS" == "Windows" ]; then
-            coverage run -m unittest discover -b;
-          else
-            make test local
-          fi
-        shell: bash
+        run: make test
       - name: Upload coverage
         if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
         uses: codecov/codecov-action@v3
