--- a/.github/workflows/deploy.yml.template
+++ b/.github/workflows/deploy.yml.template
@@ -19,11 +19,9 @@ jobs:
         with:
           python-version: 3.x
       - name: Install dependencies
-        run:
-          make install
-      - name: Run tests
-        run:
-          make test
+        run: make install
+      - name: Test
+        run: make test
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
