--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         run: make install
       - name: Get version
         id: get_version
-        run: echo ::set-output name=BRANCH::${GITHUB_REF#refs/heads/}
+        run: echo ::set-output name=BRANCH::${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}
       - name: Test
         run: BRANCH=${{ steps.get_version.outputs.BRANCH }} make test
 
