Add cleanup to Makefile.

--- a/Makefile.template
+++ b/Makefile.template
@@ -1,4 +1,4 @@
-.PHONY: all env virtualenv install install-dev build build-migrations migrate test
+.PHONY: all env virtualenv install install-dev nopyc clean build build-migrations migrate test
 
 SHELL := /usr/bin/env bash
 PYTHON_BIN ?= python
@@ -26,6 +26,13 @@ install-dev: install
 		source $({%PROJECT_ID_UPPER%}_VENV)/bin/activate; \
 		python -m pip install -r requirements-dev.txt; \
 	)
+
+nopyc:
+	find . -name '*.pyc' | xargs rm -f || true
+	find . -name __pycache__ | xargs rm -rf || true
+
+clean: nopyc
+	rm -rf _build $({%PROJECT_ID_UPPER%}_VENV)
 
 build: virtualenv
 	( \
