--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ mysqlclient==2.2.3
 pytz==2024.1
 python-dateutil==2.8.2
 schedule==1.2.1
-django-health-check==3.17.0
+-e git+https://github.com/alexdlaird/django-health-check.git@alaird-4.0.1#egg=django-health-check
+
