--- a/Makefile.template
+++ b/Makefile.template
@@ -28,25 +28,25 @@ nopyc:
 clean: nopyc
 	rm -rf _build $({%PROJECT_ID_UPPER%}_VENV)
 
-build: virtualenv
+build: install
 	( \
 		source $({%PROJECT_ID_UPPER%}_VENV)/bin/activate; \
 		python manage.py collectstatic --noinput; \
 	)
 
-build-migrations: env virtualenv install
+build-migrations: install
 	( \
 		source $({%PROJECT_ID_UPPER%}_VENV)/bin/activate; \
 		python manage.py makemigrations; \
 	)
 
-migrate: virtualenv
+migrate: install
 	( \
 		source $({%PROJECT_ID_UPPER%}_VENV)/bin/activate; \
 		python manage.py migrate; \
 	)
 
-test: virtualenv
+test: install
 	( \
 		source $({%PROJECT_ID_UPPER%}_VENV)/bin/activate; \
 		python -m coverage run --source='.' manage.py test && python -m coverage html -d _build/coverage && python -m coverage xml -o _build/coverage/coverage.xml; \
