--- a/Makefile.template
+++ b/Makefile.template
@@ -26,7 +26,7 @@ nopyc:
 	find . -name __pycache__ | xargs rm -rf || true
 
 clean: nopyc
-	rm -rf _build $({%PROJECT_ID_UPPER%}_VENV)
+	rm -rf build $({%PROJECT_ID_UPPER%}_VENV)
 
 build: install
 	( \
@@ -49,5 +49,6 @@ migrate: install
 test: install
 	( \
 		source $({%PROJECT_ID_UPPER%}_VENV)/bin/activate; \
-		python -m coverage run --source='.' manage.py test && python -m coverage html -d _build/coverage && python -m coverage xml -o _build/coverage/coverage.xml; \
+		coverage run manage.py test; \
+		coverage report && coverage html && coverage xml; \
 	)
