--- a/.github/workflows/build.yml.template
+++ b/.github/workflows/build.yml.template
@@ -42,4 +42,4 @@ jobs:
         if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
         uses: codecov/codecov-action@v3
         with:
-          directory: ./_build/coverage
+          directory: ./build/coverage
