Badge updates for coverage, README updates.

--- a/README.md.template
+++ b/README.md.template
@@ -1,4 +1,5 @@
 ![Python Versions](https://img.shields.io/badge/python-%203.8%20|%203.9%20|%203.10%20|%203.11%20-blue)
+[![Coverage](https://img.shields.io/codecov/c/github/{%PROJECT_GITHUB_USER%}/{%PROJECT_ID%})](https://codecov.io/gh/{%PROJECT_GITHUB_USER%}/{%PROJECT_ID%})
 [![Build](https://img.shields.io/github/actions/workflow/status/{%PROJECT_GITHUB_USER%}/{%PROJECT_ID%}/build.yml)](https://github.com/{%PROJECT_GITHUB_USER%}/{%PROJECT_ID%}/actions/workflows/build.yml)
 ![GitHub License](https://img.shields.io/github/license/{%PROJECT_GITHUB_USER%}/{%PROJECT_ID%})
 
@@ -18,13 +19,13 @@ To setup the Python/Django build environment, execute:
 make install
 ```
 
-This project is configured to work with a Virtualenv which has now been setup in the `.venv` folder. If you're
+This project is configured to work with a Virtualenv which has now been setup in the `venv` folder. If you're
 unfamiliar with how this works, [read up on Virtualenv here](https://virtualenv.pypa.io/en/stable). The short version
 is, virtualenv creates isolated environments for each project's dependencies. To activate and use this environment when
 developing, execute:
 
 ```sh
-source .venv/bin/activate
+source venv/bin/activate
 ```
 
 All commands below will now be run within the virtualenv (though `make` commands will always automatically enter the
