--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -7,7 +7,7 @@ body:
 - type: markdown
   attributes:
     value: |
-      Consider [supporting the project](https://github.com/sponsors/alexdlaird) ❤ to have your request prioritized.
+      Consider [supporting the project](https://github.com/sponsors/alexdlaird) ❤️ to have your request prioritized.
 
 - type: checkboxes
   id: ack
@@ -29,12 +29,16 @@ body:
     required: true
 
 - type: input
-  id: python-version
+  id: sdk-version
   attributes:
-    label: Python Version
-    placeholder: 3.9.2
-  validations:
-    required: true
+    label: SDK Version
+    placeholder: Python 3.9.2
+
+- type: input
+  id: library-version
+  attributes:
+    label: Library Version
+    placeholder: pyngrok 1.0.3
 
 - type: textarea
   id: describe-the-bug
