--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -7,7 +7,9 @@ body:
 - type: markdown
   attributes:
     value: |
-      Consider [supporting the project](https://github.com/sponsors/alexdlaird) ❤️ to have your request prioritized.
+      Please we aware that Helium is free and is not under active development. Though [supporting the project financially](https://github.com/sponsors/alexdlaird) is appreciated ❤️ (since Helium has operating costs, even though it is free to use), we make no guarantees bug reports will be looked at or considered.
+
+      Though this project is not under active development, we are still happy to review pull requests submitted by the community to resolve bugs, so submitting a report of your experience may still be helpful to us and others.
 
 - type: checkboxes
   id: ack
