--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,10 @@ jobs:
   build:
     name: Build
 
+    env:
+      FORCE_COLOR: 1
+      PYTHONDONTWRITEBYTECODE: 1
+
     strategy:
       fail-fast: false
       matrix:
