Add Python 3.13 to build.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest ]
-        python-version: [ "3.8", "3.9", "3.11" ]
+        python-version: [ "3.9", "3.11", "3.12", "3.13" ]
 
     runs-on: ${{ matrix.os }}
 
@@ -33,14 +33,17 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: make install
-      - name: Get version
-        id: get_version
-        run: echo ::set-output name=BRANCH::${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}
       - name: Test
-        run: BRANCH=${{ steps.get_version.outputs.BRANCH }} make test
-      - name: Upload coverage
-        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
+        run: BRANCH=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}} make test
+      - name: Upload test coverage
+        if: ${{ !cancelled() }} && matrix.os == "ubuntu-latest" && matrix.python-version == "3.13"
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           directory: ./build/template-project-test-build/build/coverage
+      - name: Upload test results
+        if: ${{ !cancelled() }} && matrix.os == "ubuntu-latest" && matrix.python-version == "3.13"
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          directory: ./build/test-results
