--- a/.github/workflows/build.yml.template
+++ b/.github/workflows/build.yml.template
@@ -21,13 +21,13 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest, macos-latest ]
-        python-version: [ "3.11" ]
+        python-version: [ "3.13" ]
         include:
-          - python-version: "3.8"
+          - python-version: "3.12"
+            os: ubuntu-latest
+          - python-version: "3.11"
             os: ubuntu-latest
           - python-version: "3.9"
-            os: ubuntu-latest
-          - python-version: "3.10"
             os: ubuntu-latest
 
     runs-on: ${{ matrix.os }}
@@ -42,8 +42,15 @@ jobs:
         run: make install
       - name: Run tests
         run: make test
-      - name: Upload coverage
-        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
-        uses: codecov/codecov-action@v3
+      - name: Upload test coverage
+        if: ${{ !cancelled() }} && matrix.os == "ubuntu-latest" && matrix.python-version == "3.13"
+        uses: codecov/codecov-action@v4
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           directory: ./build/coverage
+      - name: Upload test results
+        if: ${{ !cancelled() }} && matrix.os == "ubuntu-latest" && matrix.python-version == "3.13"
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          directory: ./build/test-results
