--- a/.github/workflows/deploy.yml.template
+++ b/.github/workflows/deploy.yml.template
@@ -17,10 +17,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.x
+      - name: Set up Python 3.13
         uses: actions/setup-python@v2
         with:
-          python-version: 3.x
+          python-version: "3.13"
       - name: Install dependencies
         run: make install
       - name: Test
@@ -32,4 +32,4 @@ jobs:
           aws-region: us-east-1
       - uses: actions/checkout@v4
       - id: deploy
-        uses: webfactory/create-aws-codedeploy-deployment@v0.4
+        uses: webfactory/create-aws-codedeploy-deployment@v0.5
