--- a/.github/workflows/deploy.yml.template
+++ b/.github/workflows/deploy.yml.template
@@ -6,6 +6,11 @@ on:
   release:
     types: [ created ]
 
+permissions:
+  contents: read
+  issues: none
+  pull-requests: none
+
 jobs:
   deploy:
     name: Deploy
